--- a/Runtime/CMakeLists.txt
+++ b/Runtime/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 2.6)
 project(UALRunner)
 add_executable(UALRunner main.cpp ../GC/GC.cpp)
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I. -std=c++11 -g")
-target_link_libraries(UALRunner pthread dl asmjit)
+target_link_libraries(UALRunner pthread dl)
